// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlipNumber should render correctly 1`] = `
<span
  aria-hidden={true}
  style={
    Object {
      "display": "inline-block",
      "height": 20,
      "overflow": "hidden",
      "perspective": "1000px",
      "textAlign": "left",
      "width": "20px",
    }
  }
>
  <Animate
    delaySeconds={0}
    durationSeconds={0.3}
    easeType="cubic-bezier(0.19, 1, 0.22, 1)"
    endStyle={
      Object {
        "height": "100%",
        "position": "absolute",
        "transform": "rotateX(0deg)",
        "transformStyle": "preserve-3d",
      }
    }
    startStyle={
      Object {
        "height": "100%",
        "position": "absolute",
        "transformStyle": "preserve-3d",
      }
    }
    tag="span"
  >
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(0deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      0
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(36deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(72deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(108deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      3
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(144deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      4
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(180deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      5
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(216deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      6
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(252deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      7
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(288deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      8
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(324deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      9
    </span>
  </Animate>
  <span
    data={NaN}
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "background": "black",
        "color": "white",
        "display": "flex",
        "fontSize": "19px",
        "height": 20,
        "justifyContent": "center",
        "left": "0px",
        "lineHeight": "20px",
        "position": "absolute",
        "textAlign": "center",
        "transform": "rotateX(0deg) translateZ(30px)",
        "visibility": "hidden",
        "width": "20px",
      }
    }
  >
    0
  </span>
</span>
`;

exports[`FlipNumber should return the correct position for matching number 1`] = `
<span
  aria-hidden={true}
  style={
    Object {
      "display": "inline-block",
      "height": 20,
      "overflow": "hidden",
      "perspective": "1000px",
      "textAlign": "left",
      "width": "20px",
    }
  }
>
  <Animate
    delaySeconds={0}
    durationSeconds={0.3}
    easeType="cubic-bezier(0.19, 1, 0.22, 1)"
    endStyle={
      Object {
        "height": "100%",
        "position": "absolute",
        "transform": "rotateX(-72deg)",
        "transformStyle": "preserve-3d",
      }
    }
    startStyle={
      Object {
        "height": "100%",
        "position": "absolute",
        "transformStyle": "preserve-3d",
      }
    }
    tag="span"
  >
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(0deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      0
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(36deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(72deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(108deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      3
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(144deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      4
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(180deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      5
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(216deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      6
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(252deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      7
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(288deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      8
    </span>
    <span
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "background": "black",
          "color": "white",
          "display": "flex",
          "fontSize": "19px",
          "height": 20,
          "justifyContent": "center",
          "lineHeight": "20px",
          "position": "absolute",
          "textAlign": "center",
          "transform": "rotateX(324deg) translateZ(30px)",
          "width": "20px",
        }
      }
    >
      9
    </span>
  </Animate>
  <span
    data={NaN}
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "background": "black",
        "color": "white",
        "display": "flex",
        "fontSize": "19px",
        "height": 20,
        "justifyContent": "center",
        "left": "0px",
        "lineHeight": "20px",
        "position": "absolute",
        "textAlign": "center",
        "transform": "rotateX(0deg) translateZ(30px)",
        "visibility": "hidden",
        "width": "20px",
      }
    }
  >
    2
  </span>
</span>
`;
